Bug 548899: Don't issue attribute-changed notification when transform attribute is animated. r=jwatt sr=roc