content/svg/content/src/nsSVGTransformSMILAttr.h
@@ -52,8 +52,9 @@ class nsSVGSMILTransform;
 class nsSVGTransformSMILAttr : public nsISMILAttr
 {
 public:
-  nsSVGTransformSMILAttr(nsSVGAnimatedTransformList* aTransform)
-    : mVal(aTransform) {}
+  nsSVGTransformSMILAttr(nsSVGAnimatedTransformList* aTransform,
+                         nsSVGElement* aSVGElement)
+    : mVal(aTransform), mSVGElement(aSVGElement) {}
 
   // nsISMILAttr methods
   virtual nsresult ValueFromString(const nsAString& aStr,
@@ -83,6 +84,7 @@ private:
   // created & destroyed during a SMIL sample-step, during which time the DOM
   // isn't modified.
   nsSVGAnimatedTransformList* mVal;
+  nsSVGElement* mSVGElement;
 };
 
 #endif // NS_SVGTRANSFORMSMILATTR_H_
